// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Upload component renders correctly 1`] = `
<div>
  <div
    class="Upload-file-13"
    data-testid="test-file"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root Upload-fileDisplay-16"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm-1 4l6 6v10c0 1.1-.9 2-2 2H7.99C6.89 23 6 22.1 6 21l.01-14c0-1.1.89-2 1.99-2h7zm-1 7h5.5L14 6.5V12z"
      />
    </svg>
    <div
      class="Upload-fileInfoWrapper-19"
    >
      <p
        class="MuiTypography-root Upload-filename-14 Typography-root-21 MuiTypography-body1"
        data-testid="typography"
      >
        something
      </p>
      <p
        class="MuiTypography-root Upload-error-17 Typography-root-21 MuiTypography-body1"
        data-testid="typography"
      >
        Upload failed
      </p>
    </div>
    <button
      aria-label="Remove file"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root-40 iconButton IconButton-medium-46 IconButton-text-42 Upload-deleteIcon-18"
      data-testid="file-delete"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`Upload component renders correctly if an error recieved in API response 1`] = `
<div>
  <div
    class="Upload-file-349"
    data-testid="test-file"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root Upload-fileDisplay-352"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M20 2H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-8.5 7.5c0 .83-.67 1.5-1.5 1.5H9v2H7.5V7H10c.83 0 1.5.67 1.5 1.5v1zm5 2c0 .83-.67 1.5-1.5 1.5h-2.5V7H15c.83 0 1.5.67 1.5 1.5v3zm4-3H19v1h1.5V11H19v2h-1.5V7h3v1.5zM9 9.5h1v-1H9v1zM4 6H2v14c0 1.1.9 2 2 2h14v-2H4V6zm10 5.5h1v-3h-1v3z"
      />
    </svg>
    <div
      class="Upload-fileInfoWrapper-355"
    >
      <p
        class="MuiTypography-root Upload-filename-350 Typography-root-357 MuiTypography-body1"
        data-testid="typography"
      >
        something
      </p>
      <div
        class="Upload-progress-356"
      >
        <div
          class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-indeterminate"
          role="progressbar"
        >
          <div
            class="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Indeterminate"
          />
          <div
            class="MuiLinearProgress-bar MuiLinearProgress-bar2Indeterminate MuiLinearProgress-barColorPrimary"
          />
        </div>
      </div>
    </div>
    <button
      aria-label="Remove file"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root-376 iconButton IconButton-medium-382 IconButton-text-378 Upload-deleteIcon-354"
      data-testid="file-delete"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`Upload component renders correctly with large file size 1`] = `
<div>
  <div
    class="Upload-file-301"
    data-testid="test-file"
  >
    <img
      alt="something"
      class="Upload-fileDisplay-304"
      src="url"
    />
    <div
      class="Upload-fileInfoWrapper-307"
    >
      <p
        class="MuiTypography-root Upload-filename-302 Typography-root-309 MuiTypography-body1"
        data-testid="typography"
      >
        something
      </p>
      <div
        class="Upload-progress-308"
      >
        <div
          class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-indeterminate"
          role="progressbar"
        >
          <div
            class="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Indeterminate"
          />
          <div
            class="MuiLinearProgress-bar MuiLinearProgress-bar2Indeterminate MuiLinearProgress-barColorPrimary"
          />
        </div>
      </div>
    </div>
    <button
      aria-label="Remove file"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root-328 iconButton IconButton-medium-334 IconButton-text-330 Upload-deleteIcon-306"
      data-testid="file-delete"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;
